pa2c++/cool.output
Terminals unused in grammar

   ERROR


Stato 112 9 conflitti shift/riduzione
Stato 171 9 conflitti shift/riduzione
Stato 228conflitti: 9 shift/riduzione, 21 riduzione/riduzione
Stato 244 9 conflitti shift/riduzione
Stato 257conflitti: 9 shift/riduzione, 21 riduzione/riduzione


Grammatica

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    8      | error ';'

    9 dummy_feature_list: %empty

   10 feature_list: feature
   11             | feature_list feature

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' dummy_formal_list ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID ':' TYPEID ASSIGN expression ';'
   15        | OBJECTID ':' TYPEID ';'
   16        | error ';'

   17 dummy_formal_list: %empty

   18 formal: OBJECTID ':' TYPEID

   19 formal_list: formal
   20            | formal_list ',' formal

   21 dummy_expression_list: %empty

   22 expression_list: expression
   23                | expression_list ',' expression

   24 block_expression_list: expression_semi
   25                      | block_expression_list expression_semi

   26 expression_semi: OBJECTID ASSIGN expression ';'
   27                | OBJECTID ASSIGN error ';'
   28                | expression '@' TYPEID '.' OBJECTID '(' expression_list ')' ';'
   29                | expression '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')' ';'
   30                | expression '.' OBJECTID '(' expression_list ')' ';'
   31                | expression '.' OBJECTID '(' dummy_expression_list ')' ';'
   32                | OBJECTID '(' expression_list ')' ';'
   33                | OBJECTID '(' dummy_expression_list ')' ';'
   34                | IF expression THEN expression ELSE expression FI ';'
   35                | WHILE expression LOOP expression POOL ';'
   36                | '{' block_expression_list '}' ';'
   37                | letexpr ';'
   38                | CASE expression OF case_list ESAC ';'
   39                | NEW TYPEID ';'
   40                | ISVOID expression ';'
   41                | expression '+' expression ';'
   42                | expression '-' expression ';'
   43                | expression '*' expression ';'
   44                | expression '/' expression ';'
   45                | '~' expression ';'
   46                | expression LE expression ';'
   47                | expression '<' expression ';'
   48                | expression '=' expression ';'
   49                | NOT expression ';'
   50                | '(' expression ')' ';'
   51                | OBJECTID ';'
   52                | INT_CONST ';'
   53                | STR_CONST ';'
   54                | BOOL_CONST ';'
   55                | error ';'

   56 expression: OBJECTID ASSIGN expression
   57           | OBJECTID ASSIGN error
   58           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   59           | expression '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   60           | expression '.' OBJECTID '(' expression_list ')'
   61           | expression '.' OBJECTID '(' dummy_expression_list ')'
   62           | OBJECTID '(' expression_list ')'
   63           | OBJECTID '(' dummy_expression_list ')'
   64           | IF expression THEN expression ELSE expression FI
   65           | WHILE expression LOOP expression POOL
   66           | '{' block_expression_list '}'
   67           | letexpr
   68           | CASE expression OF case_list ESAC
   69           | NEW TYPEID
   70           | ISVOID expression
   71           | expression '+' expression
   72           | expression '-' expression
   73           | expression '*' expression
   74           | expression '/' expression
   75           | '~' expression
   76           | expression LE expression
   77           | expression '<' expression
   78           | expression '=' expression
   79           | NOT expression
   80           | '(' expression ')'
   81           | OBJECTID
   82           | INT_CONST
   83           | STR_CONST
   84           | BOOL_CONST

   85 case: OBJECTID ':' TYPEID DARROW expression ';'

   86 case_list: case
   87          | case_list case

   88 letexpr: LET OBJECTID ':' TYPEID letexpr_init
   89        | LET OBJECTID ':' TYPEID ASSIGN expression letexpr_init
   90        | LET OBJECTID ':' TYPEID IN expression
   91        | LET OBJECTID ':' TYPEID ASSIGN expression IN expression

   92 letexpr_init: ',' OBJECTID ':' TYPEID letexpr_init
   93             | ',' OBJECTID ':' TYPEID ASSIGN expression letexpr_init
   94             | IN expression
   95             | error letexpr_init


Simboli terminali e regole in cui appaiono

$end (0) 0
'(' (40) 12 13 28 29 30 31 32 33 50 58 59 60 61 62 63 80
')' (41) 12 13 28 29 30 31 32 33 50 58 59 60 61 62 63 80
'*' (42) 43 73
'+' (43) 41 71
',' (44) 20 23 92 93
'-' (45) 42 72
'.' (46) 28 29 30 31 58 59 60 61
'/' (47) 44 74
':' (58) 12 13 14 15 18 85 88 89 90 91 92 93
';' (59) 4 5 6 7 8 12 13 14 15 16 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 85
'<' (60) 47 77
'=' (61) 48 78
'@' (64) 28 29 58 59
'{' (123) 4 5 6 7 12 13 36 66
'}' (125) 4 5 6 7 12 13 36 66
'~' (126) 45 75
error (256) 8 16 27 55 57 95
CLASS (258) 4 5 6 7
ELSE (259) 34 64
FI (260) 34 64
IF (261) 34 64
IN (262) 90 91 94
INHERITS (263) 5 7
LET (264) 88 89 90 91
LOOP (265) 35 65
POOL (266) 35 65
THEN (267) 34 64
WHILE (268) 35 65
CASE (269) 38 68
ESAC (270) 38 68
OF (271) 38 68
DARROW (272) 85
NEW (273) 39 69
ISVOID (274) 40 70
STR_CONST (275) 53 83
INT_CONST (276) 52 82
BOOL_CONST (277) 54 84
TYPEID (278) 4 5 6 7 12 13 14 15 18 28 29 39 58 59 69 85 88 89 90 91
    92 93
OBJECTID (279) 12 13 14 15 18 26 27 28 29 30 31 32 33 51 56 57 58 59
    60 61 62 63 81 85 88 89 90 91 92 93
ASSIGN (280) 14 26 27 56 57 89 91 93
NOT (281) 49 79
LE (282) 46 76
ERROR (283)


Simboli nonterminali e regole in cui appaiono

$accept (45)
    nel primo membro: 0
program (46)
    nel primo membro: 1, nel secondo membro: 0
class_list (47)
    nel primo membro: 2 3, nel secondo membro: 1 3
class (48)
    nel primo membro: 4 5 6 7 8, nel secondo membro: 2 3
dummy_feature_list (49)
    nel primo membro: 9, nel secondo membro: 4 5
feature_list (50)
    nel primo membro: 10 11, nel secondo membro: 6 7 11
feature (51)
    nel primo membro: 12 13 14 15 16, nel secondo membro: 10 11
dummy_formal_list (52)
    nel primo membro: 17, nel secondo membro: 13
formal (53)
    nel primo membro: 18, nel secondo membro: 19 20
formal_list (54)
    nel primo membro: 19 20, nel secondo membro: 12 20
dummy_expression_list (55)
    nel primo membro: 21, nel secondo membro: 29 31 33 59 61 63
expression_list (56)
    nel primo membro: 22 23, nel secondo membro: 23 28 30 32 58 60
    62
block_expression_list (57)
    nel primo membro: 24 25, nel secondo membro: 25 36 66
expression_semi (58)
    nel primo membro: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54 55, nel secondo membro:
    24 25
expression (59)
    nel primo membro: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82 83 84, nel secondo membro:
    12 13 14 22 23 26 28 29 30 31 34 35 38 40 41 42 43 44 45 46 47
    48 49 50 56 58 59 60 61 64 65 68 70 71 72 73 74 75 76 77 78 79
    80 85 89 90 91 93 94
case (60)
    nel primo membro: 85, nel secondo membro: 86 87
case_list (61)
    nel primo membro: 86 87, nel secondo membro: 38 68 87
letexpr (62)
    nel primo membro: 88 89 90 91, nel secondo membro: 37 67
letexpr_init (63)
    nel primo membro: 92 93 94 95, nel secondo membro: 88 89 92 93
    95


State 0

    0 $accept: . program $end

    error  shift e prosecuzione allo stato 1
    CLASS  shift e prosecuzione allo stato 2

    program     prosecuzione allo stato 3
    class_list  prosecuzione allo stato 4
    class       prosecuzione allo stato 5


State 1

    8 class: error . ';'

    ';'  shift e prosecuzione allo stato 6


State 2

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS . TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift e prosecuzione allo stato 7


State 3

    0 $accept: program . $end

    $end  shift e prosecuzione allo stato 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift e prosecuzione allo stato 1
    CLASS  shift e prosecuzione allo stato 2

    $end  riduzione con la regola 1 (program)

    class  prosecuzione allo stato 9


State 5

    2 class_list: class .

    $default  riduzione con la regola 2 (class_list)


State 6

    8 class: error ';' .

    $default  riduzione con la regola 8 (class)


State 7

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS TYPEID . '{' feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift e prosecuzione allo stato 10
    '{'       shift e prosecuzione allo stato 11


State 8

    0 $accept: program $end .

    $default  accetta


State 9

    3 class_list: class_list class .

    $default  riduzione con la regola 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift e prosecuzione allo stato 12


State 11

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'
    6      | CLASS TYPEID '{' . feature_list '}' ';'

    error     shift e prosecuzione allo stato 13
    OBJECTID  shift e prosecuzione allo stato 14

    '}'  riduzione con la regola 9 (dummy_feature_list)

    dummy_feature_list  prosecuzione allo stato 15
    feature_list        prosecuzione allo stato 16
    feature             prosecuzione allo stato 17


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift e prosecuzione allo stato 18


State 13

   16 feature: error . ';'

    ';'  shift e prosecuzione allo stato 19


State 14

   12 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID . '(' dummy_formal_list ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   15        | OBJECTID . ':' TYPEID ';'

    '('  shift e prosecuzione allo stato 20
    ':'  shift e prosecuzione allo stato 21


State 15

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'

    '}'  shift e prosecuzione allo stato 22


State 16

    6 class: CLASS TYPEID '{' feature_list . '}' ';'
   11 feature_list: feature_list . feature

    error     shift e prosecuzione allo stato 13
    OBJECTID  shift e prosecuzione allo stato 14
    '}'       shift e prosecuzione allo stato 23

    feature  prosecuzione allo stato 24


State 17

   10 feature_list: feature .

    $default  riduzione con la regola 10 (feature_list)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift e prosecuzione allo stato 13
    OBJECTID  shift e prosecuzione allo stato 14

    '}'  riduzione con la regola 9 (dummy_feature_list)

    dummy_feature_list  prosecuzione allo stato 25
    feature_list        prosecuzione allo stato 26
    feature             prosecuzione allo stato 17


State 19

   16 feature: error ';' .

    $default  riduzione con la regola 16 (feature)


State 20

   12 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID '(' . dummy_formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift e prosecuzione allo stato 27

    $default  riduzione con la regola 17 (dummy_formal_list)

    dummy_formal_list  prosecuzione allo stato 28
    formal             prosecuzione allo stato 29
    formal_list        prosecuzione allo stato 30


State 21

   14 feature: OBJECTID ':' . TYPEID ASSIGN expression ';'
   15        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift e prosecuzione allo stato 31


State 22

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift e prosecuzione allo stato 32


State 23

    6 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift e prosecuzione allo stato 33


State 24

   11 feature_list: feature_list feature .

    $default  riduzione con la regola 11 (feature_list)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'

    '}'  shift e prosecuzione allo stato 34


State 26

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   11 feature_list: feature_list . feature

    error     shift e prosecuzione allo stato 13
    OBJECTID  shift e prosecuzione allo stato 14
    '}'       shift e prosecuzione allo stato 35

    feature  prosecuzione allo stato 24


State 27

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift e prosecuzione allo stato 36


State 28

   13 feature: OBJECTID '(' dummy_formal_list . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift e prosecuzione allo stato 37


State 29

   19 formal_list: formal .

    $default  riduzione con la regola 19 (formal_list)


State 30

   12 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   20 formal_list: formal_list . ',' formal

    ')'  shift e prosecuzione allo stato 38
    ','  shift e prosecuzione allo stato 39


State 31

   14 feature: OBJECTID ':' TYPEID . ASSIGN expression ';'
   15        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift e prosecuzione allo stato 40
    ';'     shift e prosecuzione allo stato 41


State 32

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  riduzione con la regola 4 (class)


State 33

    6 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  riduzione con la regola 6 (class)


State 34

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift e prosecuzione allo stato 42


State 35

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift e prosecuzione allo stato 43


State 36

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift e prosecuzione allo stato 44


State 37

   13 feature: OBJECTID '(' dummy_formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift e prosecuzione allo stato 45


State 38

   12 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift e prosecuzione allo stato 46


State 39

   20 formal_list: formal_list ',' . formal

    OBJECTID  shift e prosecuzione allo stato 27

    formal  prosecuzione allo stato 47


State 40

   14 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 62
    letexpr     prosecuzione allo stato 63


State 41

   15 feature: OBJECTID ':' TYPEID ';' .

    $default  riduzione con la regola 15 (feature)


State 42

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  riduzione con la regola 5 (class)


State 43

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  riduzione con la regola 7 (class)


State 44

   18 formal: OBJECTID ':' TYPEID .

    $default  riduzione con la regola 18 (formal)


State 45

   13 feature: OBJECTID '(' dummy_formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift e prosecuzione allo stato 64


State 46

   12 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift e prosecuzione allo stato 65


State 47

   20 formal_list: formal_list ',' formal .

    $default  riduzione con la regola 20 (formal_list)


State 48

   64 expression: IF . expression THEN expression ELSE expression FI

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 66
    letexpr     prosecuzione allo stato 63


State 49

   88 letexpr: LET . OBJECTID ':' TYPEID letexpr_init
   89        | LET . OBJECTID ':' TYPEID ASSIGN expression letexpr_init
   90        | LET . OBJECTID ':' TYPEID IN expression
   91        | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression

    OBJECTID  shift e prosecuzione allo stato 67


State 50

   65 expression: WHILE . expression LOOP expression POOL

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 68
    letexpr     prosecuzione allo stato 63


State 51

   68 expression: CASE . expression OF case_list ESAC

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 69
    letexpr     prosecuzione allo stato 63


State 52

   69 expression: NEW . TYPEID

    TYPEID  shift e prosecuzione allo stato 70


State 53

   70 expression: ISVOID . expression

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 71
    letexpr     prosecuzione allo stato 63


State 54

   83 expression: STR_CONST .

    $default  riduzione con la regola 83 (expression)


State 55

   82 expression: INT_CONST .

    $default  riduzione con la regola 82 (expression)


State 56

   84 expression: BOOL_CONST .

    $default  riduzione con la regola 84 (expression)


State 57

   56 expression: OBJECTID . ASSIGN expression
   57           | OBJECTID . ASSIGN error
   62           | OBJECTID . '(' expression_list ')'
   63           | OBJECTID . '(' dummy_expression_list ')'
   81           | OBJECTID .

    ASSIGN  shift e prosecuzione allo stato 72
    '('     shift e prosecuzione allo stato 73

    $default  riduzione con la regola 81 (expression)


State 58

   79 expression: NOT . expression

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 74
    letexpr     prosecuzione allo stato 63


State 59

   75 expression: '~' . expression

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 75
    letexpr     prosecuzione allo stato 63


State 60

   66 expression: '{' . block_expression_list '}'

    error       shift e prosecuzione allo stato 76
    IF          shift e prosecuzione allo stato 77
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 78
    CASE        shift e prosecuzione allo stato 79
    NEW         shift e prosecuzione allo stato 80
    ISVOID      shift e prosecuzione allo stato 81
    STR_CONST   shift e prosecuzione allo stato 82
    INT_CONST   shift e prosecuzione allo stato 83
    BOOL_CONST  shift e prosecuzione allo stato 84
    OBJECTID    shift e prosecuzione allo stato 85
    NOT         shift e prosecuzione allo stato 86
    '~'         shift e prosecuzione allo stato 87
    '{'         shift e prosecuzione allo stato 88
    '('         shift e prosecuzione allo stato 89

    block_expression_list  prosecuzione allo stato 90
    expression_semi        prosecuzione allo stato 91
    expression             prosecuzione allo stato 92
    letexpr                prosecuzione allo stato 93


State 61

   80 expression: '(' . expression ')'

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 94
    letexpr     prosecuzione allo stato 63


State 62

   14 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   58 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   59           | expression . '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   60           | expression . '.' OBJECTID '(' expression_list ')'
   61           | expression . '.' OBJECTID '(' dummy_expression_list ')'
   71           | expression . '+' expression
   72           | expression . '-' expression
   73           | expression . '*' expression
   74           | expression . '/' expression
   76           | expression . LE expression
   77           | expression . '<' expression
   78           | expression . '=' expression

    LE   shift e prosecuzione allo stato 95
    '<'  shift e prosecuzione allo stato 96
    '='  shift e prosecuzione allo stato 97
    '+'  shift e prosecuzione allo stato 98
    '-'  shift e prosecuzione allo stato 99
    '*'  shift e prosecuzione allo stato 100
    '/'  shift e prosecuzione allo stato 101
    '@'  shift e prosecuzione allo stato 102
    '.'  shift e prosecuzione allo stato 103
    ';'  shift e prosecuzione allo stato 104


State 63

   67 expression: letexpr .

    $default  riduzione con la regola 67 (expression)


State 64

   13 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift e prosecuzione allo stato 105


State 65

   12 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift e prosecuzione allo stato 106


State 66

   58 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   59           | expression . '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   60           | expression . '.' OBJECTID '(' expression_list ')'
   61           | expression . '.' OBJECTID '(' dummy_expression_list ')'
   64           | IF expression . THEN expression ELSE expression FI
   71           | expression . '+' expression
   72           | expression . '-' expression
   73           | expression . '*' expression
   74           | expression . '/' expression
   76           | expression . LE expression
   77           | expression . '<' expression
   78           | expression . '=' expression

    THEN  shift e prosecuzione allo stato 107
    LE    shift e prosecuzione allo stato 95
    '<'   shift e prosecuzione allo stato 96
    '='   shift e prosecuzione allo stato 97
    '+'   shift e prosecuzione allo stato 98
    '-'   shift e prosecuzione allo stato 99
    '*'   shift e prosecuzione allo stato 100
    '/'   shift e prosecuzione allo stato 101
    '@'   shift e prosecuzione allo stato 102
    '.'   shift e prosecuzione allo stato 103


State 67

   88 letexpr: LET OBJECTID . ':' TYPEID letexpr_init
   89        | LET OBJECTID . ':' TYPEID ASSIGN expression letexpr_init
   90        | LET OBJECTID . ':' TYPEID IN expression
   91        | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression

    ':'  shift e prosecuzione allo stato 108


State 68

   58 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   59           | expression . '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   60           | expression . '.' OBJECTID '(' expression_list ')'
   61           | expression . '.' OBJECTID '(' dummy_expression_list ')'
   65           | WHILE expression . LOOP expression POOL
   71           | expression . '+' expression
   72           | expression . '-' expression
   73           | expression . '*' expression
   74           | expression . '/' expression
   76           | expression . LE expression
   77           | expression . '<' expression
   78           | expression . '=' expression

    LOOP  shift e prosecuzione allo stato 109
    LE    shift e prosecuzione allo stato 95
    '<'   shift e prosecuzione allo stato 96
    '='   shift e prosecuzione allo stato 97
    '+'   shift e prosecuzione allo stato 98
    '-'   shift e prosecuzione allo stato 99
    '*'   shift e prosecuzione allo stato 100
    '/'   shift e prosecuzione allo stato 101
    '@'   shift e prosecuzione allo stato 102
    '.'   shift e prosecuzione allo stato 103


State 69

   58 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   59           | expression . '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   60           | expression . '.' OBJECTID '(' expression_list ')'
   61           | expression . '.' OBJECTID '(' dummy_expression_list ')'
   68           | CASE expression . OF case_list ESAC
   71           | expression . '+' expression
   72           | expression . '-' expression
   73           | expression . '*' expression
   74           | expression . '/' expression
   76           | expression . LE expression
   77           | expression . '<' expression
   78           | expression . '=' expression

    OF   shift e prosecuzione allo stato 110
    LE   shift e prosecuzione allo stato 95
    '<'  shift e prosecuzione allo stato 96
    '='  shift e prosecuzione allo stato 97
    '+'  shift e prosecuzione allo stato 98
    '-'  shift e prosecuzione allo stato 99
    '*'  shift e prosecuzione allo stato 100
    '/'  shift e prosecuzione allo stato 101
    '@'  shift e prosecuzione allo stato 102
    '.'  shift e prosecuzione allo stato 103


State 70

   69 expression: NEW TYPEID .

    $default  riduzione con la regola 69 (expression)


State 71

   58 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   59           | expression . '@' TYPEID '.' OBJECTID '(' dummy_expression_list ')'
   60           | expression . '.' OBJECTID '(' expression_list ')'
   61           | expression . '.' OBJECTID '(' dummy_expression_list ')'
   70           | ISVOID expression .
   71           | expression . '+' expression
   72           | expression . '-' expression
   73           | expression . '*' expression
   74           | expression . '/' expression
   76           | expression . LE expression
   77           | expression . '<' expression
   78           | expression . '=' expression

    '@'  shift e prosecuzione allo stato 102
    '.'  shift e prosecuzione allo stato 103

    $default  riduzione con la regola 70 (expression)


State 72

   56 expression: OBJECTID ASSIGN . expression
   57           | OBJECTID ASSIGN . error

    error       shift e prosecuzione allo stato 111
    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    expression  prosecuzione allo stato 112
    letexpr     prosecuzione allo stato 63


State 73

   62 expression: OBJECTID '(' . expression_list ')'
   63           | OBJECTID '(' . dummy_expression_list ')'

    IF          shift e prosecuzione allo stato 48
    LET         shift e prosecuzione allo stato 49
    WHILE       shift e prosecuzione allo stato 50
    CASE        shift e prosecuzione allo stato 51
    NEW         shift e prosecuzione allo stato 52
    ISVOID      shift e prosecuzione allo stato 53
    STR_CONST   shift e prosecuzione allo stato 54
    INT_CONST   shift e prosecuzione allo stato 55
    BOOL_CONST  shift e prosecuzione allo stato 56
    OBJECTID    shift e prosecuzione allo stato 57
    NOT         shift e prosecuzione allo stato 58
    '~'         shift e prosecuzione allo stato 59
    '{'         shift e prosecuzione allo stato 60
    '('         shift e prosecuzione allo stato 61

    $default  riduzione con la regola 21 (dummy_expression_list)

    dummy_expression_list  prosecuzione allo stato 113
    expression_list        prosecuzione allo stato 114
    expression             prosecuzione allo stato 115
    letexpr                prosecuzione allo stato 63


State 74
